update: step 1) add grafana dashboard, datasources

--- a/kube-monitoring-stack/charts/prometheus/values.yaml
+++ b/kube-monitoring-stack/charts/prometheus/values.yaml
@@ -762,7 +762,8 @@ server:
 ## Prometheus server ConfigMap entries for rule files (allow prometheus labels interpolation)
 ruleFiles: {}
 
-## Prometheus server ConfigMap entries for scrape_config_files
+## Prometheus 
+server ConfigMap entries for scrape_config_files
 ## (allows scrape configs defined in additional files)
 ##
 scrapeConfigFiles: []
